--- a/project2/webpage/profilewebpage/index.html
+++ b/project2/webpage/profilewebpage/index.html
@@ -25,6 +25,8 @@ crossorigin="anonymous"></script>
     
     
     </style>
+    <meta name="description" content="Information of Pattaraporn Mapanya is used in the job application">
+    <meta name="keywords" content="Pattaraporn Mapanya, Resume, Skills, Education, Project">
   </head>
   <body>
     <div class="container">
@@ -64,19 +66,35 @@ crossorigin="anonymous"></script>
       <div class="row">
         <div class="col-sm-9 col-xs-12">
           <div class="nes-balloon from-left">
-            <p> Hello World. This is Pattaraporn mapanya (640510185) . I have a
-              strong desire to work as a content creator. I can create
-              informative content, creative storytelling content, marketing
-              content, and social media content effectively. Furthermore, I
-              possess writing and editing skills, as well as the ability to
-              manage and generate interest in content through various channels
-              such as social media.<em class="nes-icon star"></em> </p>
+            <p> Hello World. This is Pattaraporn mapanya. I have a strong desire
+              to work as a content creator. I can create informative content,
+              creative storytelling content, marketing content, and social media
+              content effectively. Furthermore, I possess writing and editing
+              skills, as well as the ability to manage and generate interest in
+              content through various channels such as social media.<em class="nes-icon star"></em>
+            </p>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-sm-12 col-xs-12"> <img src="image/mypic.png" alt="mypic"
-            class="img-fluid" height="350%" width="370%"> </div>
+        <div class="col-md-4 col-sm-12 col-xs-12">
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img src="../../../gif/mypic.png"
+                  class="d-block w-100" alt="mypic" height="350%" width="370%">
+              </div>
+              <div class="carousel-item"> <img src="../../../gif/mypic2.png" class="d-block w-100"
+                  alt="mypic2" height="300%" width="300%"> </div>
+              <div class="carousel-item"> <img src="../../../gif/mypic3.png" class="d-block w-100"
+                  alt="mypic3" height="450px" width="300px"> </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+              data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span> </button> <button
+              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+              data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span> </button> </div>
+        </div>
         <div class="col-md-8 col-sm-12 col-xs-12">
           <div class="nes-container is-dark with-title">
             <h3 class="title">My Socials</h3>
@@ -146,7 +164,7 @@ crossorigin="anonymous"></script>
           Education </h3>
         <div class="nes-container is-dark">
           <div class="row">
-            <div class="col-xs-2"><img src="image/myuni.png" alt="myuni" style="width: 133px; height: 131px;"></div>
+            <div class="col-xs-2"><img src="../../image/myuni.png" alt="myuni" style="width: 133px; height: 131px;"></div>
             <div class="col-xs-10"><br>
             </div>
             <div class="col-xs-10">Slipakorn University &nbsp; </div>
@@ -159,8 +177,8 @@ crossorigin="anonymous"></script>
         <h3 class="topic-title"> <a id="myexp"> My Project </a></h3>
         <div class="nes-container is-white">
           <div class="row">
-            <div class="col-xs-2"><img src="image/part-time.png" alt="myparttime"
-                style="width: 208px; height: 205px;"></div>
+            <div class="col-xs-2"><img src="../../../gif/parttime.png" alt="myparttime"
+                style="width: 300px; height: 450px;"></div>
             <div class="col-xs-10"><br>
             </div>
             <div class="col-xs-10">part-time at bake a wish</div>
