--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+
+      rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+
       crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/styleprofile.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+
 crossorigin="anonymous"></script>
     <style>
     
@@ -30,20 +34,27 @@ crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light mynav fixed-top"> <a class="navbar-brand"
+      <nav class="navbar navbar-expand-lg navbar-light mynav fixed-top"> <a class="navbar-brand"
+
           style="font-family:'Pixeboy'; font-size: 90px; color:white;" href="#">WELCOME!</a>
-        <button class="navbar-toggler" style="color:white;" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        <button class="navbar-toggler" style="color:white;" type="button" data-bs-toggle="collapse"
+
+          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+
           aria-label="Toggle navigation"> <span class="navbar-toggler-icon" style="color:white;"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" style="color:white;"
+        <div class="collapse navbar-collapse justify-content-end" style="color:white;"
+
           id="navbarNav">
           <ul class="navbar-nav nav-underline">
-            <li class="nav-item" style="text-align: center;"> <a class="nav-link"
+            <li class="nav-item" style="text-align: center;"> <a class="nav-link"
+
                 style="font-family:'Pixeboy'; font-size: 30px; color: white;" href="../../index.html">Home</a>
             </li>
-            <li class="nav-item" style="text-align: center;"> <a class="nav-link"
-                style="font-family:'Pixeboy'; font-size: 30px; color: white;" href="#myexp"
+            <li class="nav-item" style="text-align: center;"> <a class="nav-link"
+
+                style="font-family:'Pixeboy'; font-size: 30px; color: white;" href="#myexp"
+
                 id="">Project</a> </li>
           </ul>
         </div>
@@ -52,7 +63,8 @@ crossorigin="anonymous"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap"
+      <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap"
+
         rel="stylesheet">
       <nav style="padding: 20px; border-bottom: 3px solid #ccc; margin-bottom: 60px">
         <h2> <i class="nes-icon coin"></i> Content Creator </h2>
@@ -80,18 +92,24 @@ crossorigin="anonymous"></script>
         <div class="col-md-4 col-sm-12 col-xs-12">
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img src="../../../gif/mypic.png"
+              <div class="carousel-item active"> <img src="image/mypic.png"
+
                   class="d-block w-100" alt="mypic" height="350%" width="370%">
               </div>
-              <div class="carousel-item"> <img src="../../../gif/mypic2.png" class="d-block w-100"
+              <div class="carousel-item"> <img src="image/mypic2.png" class="d-block w-100"
+
                   alt="mypic2" height="300%" width="300%"> </div>
-              <div class="carousel-item"> <img src="../../../gif/mypic3.png" class="d-block w-100"
+              <div class="carousel-item"> <img src="image/mypic3.png" class="d-block w-100"
+
                   alt="mypic3" height="450px" width="300px"> </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+
               data-bs-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span> </button> <button
-              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+              <span class="visually-hidden">Previous</span> </button> <button
+
+              class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+
               data-bs-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span> </button> </div>
         </div>
@@ -123,22 +141,26 @@ crossorigin="anonymous"></script>
           <h3 class="title">My skills</h3>
           <div class="row">
             <div class="col-sm-4 col-xs-12">MS Word</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="90" max="100"> </progress> </div>
           </div>
           <div class="row">
             <div class="col-sm-4 col-xs-12">PS Photoshop</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="75" max="100"> </progress> </div>
           </div>
           <div class="row">
             <div class="col-sm-4 col-xs-12">Excle</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="95" max="100"> </progress> </div>
           </div>
           <div class="row">
             <div class="col-sm-4 col-xs-12">Photopea</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="95" max="100"> </progress> </div>
           </div>
         </div>
@@ -146,17 +168,20 @@ crossorigin="anonymous"></script>
           <h3 class="title">My language</h3>
           <div class="row">
             <div class="col-sm-4 col-xs-12">English</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="90" max="100"> </progress> </div>
           </div>
           <div class="row">
             <div class="col-sm-4 col-xs-12">French</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="70" max="100"> </progress> </div>
           </div>
           <div class="row">
             <div class="col-sm-4 col-xs-12">Japanese</div>
-            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+            <div class="col-sm-8 col-xs-12"> <progress class="nes-progress is-success"
+
                 value="55" max="100"> </progress> </div>
           </div>
         </div>
@@ -164,7 +189,7 @@ crossorigin="anonymous"></script>
           Education </h3>
         <div class="nes-container is-dark">
           <div class="row">
-            <div class="col-xs-2"><img src="../../image/myuni.png" alt="myuni" style="width: 133px; height: 131px;"></div>
+            <div class="col-xs-2"><img src="image/myuni.png" alt="myuni" style="width: 133px; height: 131px;"></div>
             <div class="col-xs-10"><br>
             </div>
             <div class="col-xs-10">Slipakorn University &nbsp; </div>
@@ -177,7 +202,8 @@ crossorigin="anonymous"></script>
         <h3 class="topic-title"> <a id="myexp"> My Project </a></h3>
         <div class="nes-container is-white">
           <div class="row">
-            <div class="col-xs-2"><img src="../../../gif/parttime.png" alt="myparttime"
+            <div class="col-xs-2"><img src="image/parttime.png" alt="myparttime"
+
                 style="width: 300px; height: 450px;"></div>
             <div class="col-xs-10"><br>
             </div>
